Fixes display none feature when nav is hidden. Fixes misaligned recipe image

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -36,7 +36,7 @@ body {
 }
 
 .nav.hide {
-    /* display: none; */
+    display: none;
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s ease-in-out 1s, opacity 1s ease-in-out;
@@ -108,7 +108,7 @@ body {
     padding: 10px;
 }
 
-.recipe-image {
+.direct-rImage {
     width: 80%;
 }
 
